# image_processor

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  controller.cpp  controller.h  exception.cpp  exceptions.h  image.cpp  image.h  image_processor.cpp  io.cpp  io.h  parser.cpp  parser.h  readme.md
factories/: anime_factory.cpp  anime_factory.h  base_factory.cpp  base_factory.h  compress_factory.cpp  compress_factory.h  crop_factory.cpp  crop_factory.h  edge_detection_factory.cpp  edge_detection_factory.h  gaussian_blur_factory.cpp  gaussian_blur_factory.h  grayscale_factory.cpp  grayscale_factory.h  negative_factory.cpp  negative_factory.h  sharpening_factory.cpp  sharpening_factory.h
filters/: anime.cpp  anime.h  base_filters.cpp  base_filters.h  compress.cpp  compress.h  crop.cpp  crop.h  edge_detection.cpp  edge_detection.h  gaussian_blur.cpp  gaussian_blur.h  grayscale.cpp  grayscale.h  negative.cpp  negative.h  sharpening.cpp  sharpening.h
